--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: date_range_picker
+name: flutter_date_range_picker
 description: A date range picker for Flutter
 version: 0.0.1
 homepage: https://github.com/GaspardMerten/date_range_picker
