--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: flutter_date_range_picker
 description: Flutter package for selecting date ranges with input, dialog, and calendar options.
-version: 0.1.0
+version: 0.1.1
 homepage: https://github.com/GaspardMerten/date_range_picker
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
-  intl: ^0.18.0
+  intl: '>=0.18.0 <0.20.0'
   flutter:
     sdk: flutter
 
