--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,11 +1,11 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\gaspa\tools\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\gaspa\Documents\Dev\OpenSource\Pub\date_range_picker
+FLUTTER_ROOT=/opt/flutter
+FLUTTER_APPLICATION_PATH=/home/mauriziopinotti/Projects/easyhour/date_range_picker
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib\main.dart
+FLUTTER_TARGET=lib/main.dart
 FLUTTER_BUILD_DIR=build
-FLUTTER_BUILD_NAME=0.0.1
-FLUTTER_BUILD_NUMBER=0.0.1
+FLUTTER_BUILD_NAME=0.0.14
+FLUTTER_BUILD_NUMBER=0.0.14
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
 EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
 DART_OBFUSCATION=false
